Implements terms service
